<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_now_playing"
            android:gravity="start"
            android:textSize="@dimen/text_size_h3"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recv_now_playing"
            android:orientation="horizontal"
            tools:listitem="@layout/listitem_movie"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_popula"
            android:gravity="start"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_h3"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recv_popular"
            android:orientation="horizontal"
            tools:listitem="@layout/listitem_movie"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_top_rated"
            android:gravity="start"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_h3"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recv_top_rated"
            android:orientation="horizontal"
            tools:listitem="@layout/listitem_movie"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_coming_soon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_coming_soon"
            android:textAllCaps="true"
            android:gravity="start"
            android:textSize="@dimen/text_size_h3"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recv_coming_soon"
            android:orientation="horizontal"
            tools:listitem="@layout/listitem_movie"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>